# nfp-stack

./: .gitignore  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 320ed11fe094_create_notes_table.py
frontend/: package-lock.json
frontend/src/app/: layout.jsx
