[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Behzad Samadi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.5"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"
sqlalchemy = "^1.4.46"
alembic = "^1.9.2"
databases = {extras = ["postgresql"], version = "^0.7.0"}
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
